KS-4340: [Wiki] No scrollbar when list permission of space is too long * Fix description: ** Analyse problem: Not inplemented any scroll at space permission. ** How to fix: Calculate the height of space permission form, use javascript to apply the scroll to space permission form.

--- a/eXoApplication/wiki/webapp/src/main/webapp/skin/DefaultSkin/webui/UIWikiSettingContainer/Stylesheet.css
+++ b/eXoApplication/wiki/webapp/src/main/webapp/skin/DefaultSkin/webui/UIWikiSettingContainer/Stylesheet.css
@@ -34,8 +34,13 @@
 }
 
 .UIWikiSettingContainer .Content {
-  margin-left: 180px;
-  padding: 10px 0px; 
+  margin-left: 0px;
+  padding: 10px 0px 0px 10px;
+  overflow: auto;
+}
+
+.UIWikiSettingContainer .Content .ExtensionContainer {
+  padding-bottom: 20px;
 }
 
 .UIWikiPortlet .UIWikiSettingContainer .Spliter {
